nodejs/cert-manager-http/issuer-1/ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${serviceName}-${environment}-ingress-1
  namespace: ${environment}-${serviceName}
  annotations:
    # We need to add the cluster issuer annotation
    cert-manager.io/cluster-issuer: ${serviceName}-${environment}-new-1
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
 # We need to add a tls section
  tls:
  - hosts:
    - ${httpsDomain1}
    secretName: laravel-in-kubernetes-tls-1
  ingressClassName: nginx
  rules:
  # We also need to add a host for our ingress path
  - host: ${httpsDomain1}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${serviceName}-webserver
            port:
              number: 80
